- Code refactoring;
- Added new information blocks: humidity, country,
wind speed;

[21.02.2023]:
- Added "clear search input" button;
- Added new information blocks: visibility, cloudiness, air quality
and pressure;
- New "saved locations" block design;
- New web app logo design;
- Code refactoring;
- Added "Celsium" and "Fahrenheit" buttons (To switch between these 
temperature types, now non functional);
- Disabled selection to all images and practically all texts;
- Removed country flag icons from "weather main" block;

[22.02.2023]:
- Fixed "description" info displaying;
- Added functionality to "clear search input" button;
- Added date and time blocks to web app;

[23.02.2023]:
- Added country flag icon to "weather main" block;
- Added "save location" button;
- Added scaling animations to all buttons;
- Added "time" and "day of the week" info to "weather main" block;
- Added "saved locations count" text;
- Added Great Britain (GB) and France (FR) flags;
- Added "delete saved location" button;

[24.02.2023]:
- Removed all flags images from project;
- Integrated "FlagsAPI" api to get any country flag from 2-alpha country code;
- A check for an identical location in the list "Saved locations" was added 
to exclude the possibility of duplication of these values;

[25.02.2023]:
- Fixed issue with saving location (The location was saved with 
the value from the input and not with the value of the location 
that the user is looking for);
- Integrated "Moment.js" library (Date and time);
- Added hover animations to "save location" items;
- Added hover animations to "highlight" item;

[26.02.2023]:
- Integrated "String.js" library (Strings);
- Added functional to "Celsium" and "Fahrenheit" buttons:
    Now users can switch temperature type between celsium and fahrenheit types;

[27.02.2023]:
- Added "Copy" buttons to all "weather highlight" blocks:
    Now users can copy any weather detail to clipboard and share this information to each other;