@@ -14,6 +14,7 @@ APIs:
 =======================================================================================================================================================================
 - OpenWeather API;
 - Flags API;
+- LocalStorage API;
 
 Libraries:
 =======================================================================================================================================================================
@@ -22,4 +23,4 @@ Libraries:
 
 UI/UX:
 =======================================================================================================================================================================
-- Fontawesome icons;
+- Bootstrap icons;
